2008-04-07  Sam Steingold  <sds@gnu.org>

	* progmodes/inf-lisp.el (lisp-compile-string, lisp-eval-string):
	Add helper functions.
	(lisp-do-defun): Extracted the common part of lisp-eval-defun and
	lisp-compile-defun; DEFVAR forms reset the variables to the init
	values, just like in emacs-lisp mode eval-defun.
	(lisp-eval-defun, lisp-compile-defun): Use lisp-do-defun.
	(lisp-compile-region): Use lisp-compile-string.

2008-04-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (combine-and-quote-strings): Also quote strings that contain
	the separator.

	* pcvs-util.el (cvs-map): Avoid recursion :-(

2008-04-07  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-mode-map): Replace use of kbd.

	* calendar.el (diary-view-entries-initially-flag): Rename
	view-diary-entries-initially.  Keep old name as alias, update users.
	(calendar-mark-diary-entries-flag): Rename
	mark-diary-entries-in-calendar.  Keep old name as alias, update users.
	(calendar-view-holidays-initially-flag): Rename
	view-calendar-holidays-initially.  Keep old name as alias, update users.
	(calendar-mark-holidays-flag): Rename mark-holidays-in-calendar.
	Keep old name as alias, update users.
	(calendar-initial-window-hook): Rename initial-calendar-window-hook.
	Keep old name as alias, update users.
	(calendar-today-visible-hook): Rename today-visible-calendar-hook.
	Keep old name as alias, update users.
	(calendar-today-invisible-hook): Rename today-invisible-calendar-hook.
	Keep old name as alias, update users.
	(diary-iso-date-forms): Rename iso-date-diary-pattern.  Update users.
	(diary-american-date-forms): Rename american-date-diary-pattern.
	Keep old name as alias, update users.
	(diary-european-date-forms): Rename european-date-diary-pattern.
	Keep old name as alias, update users.
	(calendar-iso-date-display-form): Rename iso-calendar-display-form.
	Keep old name as alias, update users.
	(calendar-european-date-display-form): Rename